@@ -1,5 +1,9 @@
 2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/Win_GParted.cc: only allow 'swapon' on real partitions
+	
+2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/Win_GParted.h,
 	  src/Win_GParted.cc: added basic support for mounting unmounted
 	  partitions on mountpoints found in /etc/fstab
